Models, controllers, views for users, sessions, and reservations

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -11,3 +11,5 @@
 	<%= @restaurant.capacity %> </br>
 	<%= @restaurant.picture %> </br>
 </p>
+
+<%= link_to "Make a Reservaion", new_restaurant_reservation_path(@restaurant) %>
