--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -9,7 +9,7 @@
 	<%= @restaurant.menu %> </br>
 	<%= @restaurant.price_range %> </br>
 	<%= @restaurant.capacity %> </br>
-	<%= @restaurant.picture %> </br>
+	<%= image_tag @restaurant.picture %> </br>
 </p>
 
 <%= link_to "Make a Reservaion", new_restaurant_reservation_path(@restaurant) %>
