FactoryGirl and testing

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -12,4 +12,4 @@
 	<%= image_tag @restaurant.picture %> </br>
 </p>
 
-<%= link_to "Make a Reservaion", new_restaurant_reservation_path(@restaurant) %>
+<%= link_to "Make a Reservation", new_restaurant_reservation_path(@restaurant) %>
