Adding cols to Reervation model (open_time, close_time), changing form for new restaurant and updating seeds, restaurant params

--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -26,8 +26,12 @@
 		<%= f.text_field :phone_number %></br></br>
 	</div>
 	<div class="field">
-		<%= f.label :open_hours %></br>
-		<%= f.text_field :open_hours %></br></br>
+		<%= f.label :open_time %></br>
+		<%= f.text_field :open_time %></br></br>
+	</div>
+	<div class="field">
+		<%= f.label :close_time %></br>
+		<%= f.text_field :close_time %></br></br>
 	</div>
 	<div class="field">
 		<%= f.label :description %></br>
