--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -12,7 +12,7 @@
 			<%= image_tag restaurant.picture %> </br>
 			<%= restaurant.location %> </br>
 			<%= restaurant.phone_number %> </br>
-			<%= restaurant.open_hours %> </br>
+			<%= restaurant.open_time %> <%= restaurant.close_time %> </br></br>
 			<%= restaurant.description %> </br>
 			<%= restaurant.menu %> </br>
 			<%= restaurant.price_range %> </br>
