--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -4,7 +4,7 @@
 <p>
 	<%= @restaurant.location %> </br>
 	<%= @restaurant.phone_number %> </br>
-	<%= @restaurant.open_hours %> </br>
+	<%= @restaurant.open_time %> - <%= @restaurant.close_time %> </br>
 	<%= @restaurant.description %> </br>
 	<%= @restaurant.menu %> </br>
 	<%= @restaurant.price_range %> </br>
