--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -1,4 +1,5 @@
 <h1>Make a Reservation for: <%= @restaurant.name %> </h1>
+<%= link_to "Back to All Restaurants", restaurants_url %> </br></br>
 
 <%= form_for([@restaurant, @reservation]) do |f| %>
 	<% if @reservation.errors.any? %>
@@ -17,18 +18,15 @@
 	<% end %>
 	<div id="field">
 		<%= f.label :date %>
-		<%= f.date_field :date %>
+		<%= f.date_field :date %></br></br>
 	</div>
 	<div id="field">
 		<%= f.label :time %>
-		<%= f.select :time do %>
-			 <%= options_for_select([[@restaurant.open_time], [@restaurant.close_time]])  %>
-			 <% end %>
-		<%= f.select :time, Restaurant.all.collect { |t| [t.open_time..t.close_time] } %>
+		<%= f.select(:time, reservation_time_select(@restaurant)) %></br></br>
 	</div>
 	<div id="field">
 		<%= f.label :party_size %>
-		<%= f.number_field :party_size %>
+		<%= f.number_field :party_size %></br></br>
 	</div>
 	<div id="actions">
 		<%= f.submit %>
