--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,7 +1,12 @@
 <h1>Seat Yourself!</h1>
 
 <% if is_owner? %>
-	<%= link_to "Add a New Restaurant",  new_restaurant_url %>
+	<%= link_to "Add a New Restaurant",  new_restaurant_url %> | 
+<% end %>
+<% if current_user %>
+
+<%= link_to "See Your Current Dining Reservations",  reservations_url %>
+
 <% end %>
 
 <h3>All Restaurants</h3>
