--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -1,34 +1,4 @@
 <h1>Make a Reservation for: <%= @restaurant.name %> </h1>
 <%= link_to "Back to All Restaurants", restaurants_url %> </br></br>
 
-<%= form_for([@restaurant, @reservation]) do |f| %>
-	<% if @reservation.errors.any? %>
-		<div id="error_explanation">
-			<h3>
-				Whoops!
-				<%= pluralize(@reservation.errors.count, "error")%>
-				prohibited this reeservation from being saved:
-			</h3>
-			<ul>
-				<% @reservation.errors.full_messages.each do |message|%>
-				<li><%= message %></li>
-				<% end %>
-			</ul>
-		</div>
-	<% end %>
-	<div id="field">
-		<%= f.label :date %>
-		<%= f.date_field :date %></br></br>
-	</div>
-	<div id="field">
-		<%= f.label :time %>
-		<%= f.select(:time, reservation_time_select(@restaurant)) %></br></br>
-	</div>
-	<div id="field">
-		<%= f.label :party_size %>
-		<%= f.number_field :party_size %></br></br>
-	</div>
-	<div id="actions">
-		<%= f.submit %>
-	</div>
-<% end %>
+<%= render "form" %>
