--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -1,4 +1,4 @@
-
+<%= render "/shared/header" %>
 
 <%= link_to "Back to All Restaurants", restaurants_url %> |
 <%= link_to "See Your Current Dining Reservations",  reservations_url %>
