--- a/app/views/restaurants/edit.html.erb
+++ b/app/views/restaurants/edit.html.erb
@@ -1,4 +1,5 @@
+<%= render "/shared/header" %>
 <h3>Edit Restaurant</h3>
-<%= link_to "Back to All Restaurants", restaurants_url %>
+
 
 <%= render "form" %>
