--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,4 +1,6 @@
+<%= render "/shared/header" %>
+
 <h3>Add a Restaurant</h3>
-<%= link_to "Back to All Restaurants", restaurants_url %>
+
 
 <%= render "form" %>
