--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,68 @@
  *= require_tree .
  *= require_self
  */
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
+
+body {
+	font-family: 'Open Sans', sans-serif;
+	font-weight:300;
+	margin:0 auto;
+	background-color: #f5f3f2;
+}
+
+a { 
+	color: #222222;
+	text-decoration: none;
+}
+
+h3 {
+	text-transform: uppercase;
+	font-weight: 300;
+}
+
+h4 { 
+	text-transform: uppercase;
+	font-size: 12pt;
+}
+
+#wrapper {
+	background-color:#f5f3f2;
+	width:90%;
+	margin: 0 auto;
+	padding:20px;
+}
+
+header {
+	text-align: center;
+	background-color: #f5f3f2;
+}
+
+.userinfo {text-align: right;}
+
+.index {
+	background-color: #fff;
+	margin-top:60px;
+	padding:10px 30px;
+	width:60%;
+}
+
+.index ul li{
+	margin-bottom: 20px;
+	height:190px;
+	overflow: hidden;
+	font-size: 11pt;
+	padding-bottom: 20px;
+	border-bottom: solid 2px #f5f3f2;
+	}
+
+
+.index img {
+	width:300px;
+	height:190px;
+	float:left;
+	margin-right:10px;
+}
+ul {
+	list-style-type: none;
+	padding-left:0px;
+}
