--- a/app/views/reservations/edit.html.erb
+++ b/app/views/reservations/edit.html.erb
@@ -1,4 +1,4 @@
+<%= render "/shared/header" %>
 <h3>Edit Reservation</h3>
-<%= link_to "Back to All Restaurants", restaurants_url %>
 
 <%= render "form" %>
