--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -1,3 +1,5 @@
+<%= render "/shared/header" %>
+
 <h1>Make a Reservation for: <%= @restaurant.name %> </h1>
 <%= link_to "Back to All Restaurants", restaurants_url %> </br></br>
 
