--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,6 +1,9 @@
-<%= link_to "Back to All Restaurants", restaurants_url %> | <%= link_to "Edit", edit_restaurant_path(@restaurant) %> | <%= link_to "Delete", @restaurant, method: :delete, data: {confirm: "Are you sure you want to delete this restaurant?"}  %>
+<%= render "/shared/header" %>
+</br>
+<%= link_to "Edit", edit_restaurant_path(@restaurant) %> | <%= link_to "Delete", @restaurant, method: :delete, data: {confirm: "Are you sure you want to delete this restaurant?"}  %>
 
 <h3><%= @restaurant.name %></h3>
+
 <p>
 	<%= image_tag @restaurant.picture %> </br></br>
 	Location: <%= @restaurant.location %> </br>
