--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,11 +1,11 @@
 <header>
-	<h1><%= link_to "Seat Yourself", restaurants_url %></h1>
+	<h1><%= link_to image_tag("logo.png", alt: "Logo"), restaurants_url %></h1>
 
-	<%= link_to "Home", restaurants_url %> |
+	<%= link_to "HOME", restaurants_url %> |
 	<% if is_owner? %>
-		<%= link_to "Add a New Restaurant",  new_restaurant_url %> | 
+		<%= link_to "ADD A NEW RESTAURANT",  new_restaurant_url %> | 
 	<% end %>
 	<% if current_user %>
-		<%= link_to "See Your Current Dining Reservations",  reservations_url %>
+		<%= link_to "SEE YOUR CURRENT DINING RESERVATIONS",  reservations_url %>
 	<% end %>
 </header>
