--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,9 +32,10 @@ h3 {
 	font-weight: 300;
 }
 
-h4 { 
+h4 a { 
 	text-transform: uppercase;
 	font-size: 12pt;
+	color:#fea965;
 }
 
 #wrapper {
@@ -47,6 +48,10 @@ h4 {
 header {
 	text-align: center;
 	background-color: #f5f3f2;
+}
+
+header img {
+	width:370px;
 }
 
 .userinfo {text-align: right;}
@@ -72,7 +77,7 @@ header {
 	width:300px;
 	height:190px;
 	float:left;
-	margin-right:10px;
+	margin-right:20px;
 }
 ul {
 	list-style-type: none;
