adding the category function

--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -34,8 +34,8 @@
 		<%= f.text_field :description %></br></br>
 	</div>
 	<div class="field">
-		<%= f.label :menu %></br>
-		<%= f.text_field :menu %></br></br>
+		<%= f.label :cuisine %></br>
+		<%= f.text_field :cuisine %></br></br>
 	</div>
 	<div class="field">
 		<%= f.label :price_range %></br>
