Styling, editing views with section classes to target in css

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -50,13 +50,17 @@ header {
 	background-color: #f5f3f2;
 }
 
-header img {
-	width:370px;
+header img { width:370px; }
+
+.userinfo {
+	text-align: right; 
+	text-transform: uppercase;
+	font-size: 10pt;
 }
 
-.userinfo {text-align: right;}
+.userinfo span {color:#fea965;}
 
-.index {
+.index, .allReservations, .restaurantForm, .reservationForm {
 	background-color: #fff;
 	margin-top:60px;
 	padding:10px 30px;
@@ -70,7 +74,7 @@ header img {
 	font-size: 11pt;
 	padding-bottom: 20px;
 	border-bottom: solid 2px #f5f3f2;
-	}
+}
 
 
 .index img {
@@ -79,7 +83,151 @@ header img {
 	float:left;
 	margin-right:20px;
 }
+
 ul {
 	list-style-type: none;
 	padding-left:0px;
+}
+
+
+.restaurantShow {
+	margin-top: 20px;
+	background-color: #fff;
+	height:300px;
+}
+
+.restaurantShow h3 { 
+	font-size:20pt;
+	margin-top:-25px;
+	color:#fea965;
+}
+
+.restaurantShow ul { width:900px; }
+
+.restaurantShow ul li {
+	border-bottom: solid 2px #f5f3f2;
+	padding:3px;
+	width:300px;
+	display: inline-block;
+	font-size: 11pt;
+}
+
+.restaurantShow ul li:last-child { border-bottom: none; }
+
+.restaurantShow img {
+	width:450px;
+	height:300px;
+	float:left;
+	display: block;
+	margin-right:20px;
+}
+
+.makeReservation {
+	margin-left:20px;
+	text-transform: uppercase;
+	padding:10px;
+	margin-top:-70px;
+	clear:both;
+	float: none;
+	display: block;
+	position:absolute;
+	background-color:#fea965;
+}
+
+.makeReservation a {color:#fff;}
+
+.editDelete {
+	margin-top:40px;
+	text-align:right;
+}
+
+.editDelete a {
+	border: solid 1px black;
+	padding:5px 10px;
+	margin-right:5px;
+}
+
+.allReservations, .restaurantForm { width:auto; }
+
+.allReservations ul li span{
+	font-weight: bold;
+	color:#fea965;
+}
+
+.allReservations li img {
+	height: 30px;
+	display: inline-block;
+	vertical-align: top;
+	margin-top: -5px;
+}
+
+.restaurantForm {
+	/*text-align: center;
+	width:400px;*/
+	text-align: left;
+	width:auto;
+	margin:0 auto;
+	margin-top:60px;
+}
+
+.restaurantForm label, .reservationForm label {
+	text-transform: uppercase;
+	font-size: 10pt;
+}
+
+select#restaurant_open_time, select#restaurant_close_time, select#reservation_time {
+	border: none;
+	border-radius: 0px;
+	font-family: 'Open Sans', sans-serif;
+	background-color: #fff;
+}
+
+input {border:solid 1px #f5f3f2;}
+
+.button {
+	text-transform: uppercase;
+	padding:10px;
+	background-color:#fea965;
+	color: #fff;
+	border: none;
+	font-size: 9pt;
+	font-weight: 100;
+	cursor: pointer;
+	margin-bottom: 30px;
+}
+
+.reservationForm {
+	width:auto;
+	text-align: center;
+}
+
+input#reservation_date {
+	font-family: 'Open Sans', sans-serif;
+	text-align: center;
+}
+
+.reservationForm h1 {
+	color:#fea965;
+	text-transform: uppercase;
+}
+
+.login, .signup {
+	text-align: center;
+	margin-top:60px;
+}
+
+.login label, .signup label, input#user_user_group_owner{
+	text-transform: uppercase;
+	font-size:10pt !important;
+
+}
+
+.description label {
+	text-transform: inherit;
+	font-size:12pt;
+}
+
+.description {
+	width:400px;
+	margin: 0 auto;
 }
