--- a/app/views/reservations/edit.html.erb
+++ b/app/views/reservations/edit.html.erb
@@ -1,4 +1,5 @@
 <%= render "/shared/header" %>
-<h3>Edit Reservation</h3>
-
+<section class="reservationForm">
+<h1>Edit Reservation</h1>
 <%= render "form" %>
+</setion>
