--- a/app/views/restaurants/edit.html.erb
+++ b/app/views/restaurants/edit.html.erb
@@ -1,5 +1,7 @@
 <%= render "/shared/header" %>
+<section class="restaurantForm">
 <h3>Edit Restaurant</h3>
-
-
 <%= render "form" %>
+</section>
+
+
