--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,9 +18,9 @@
 		
 		<p class="userinfo">
 			<% if current_user %>
-				Signed in as <%= current_user.name %>. <%= link_to "Log out", session_path("current"), :method => :delete %>
+				Signed in as <span><%= current_user.name %></span>. <%= link_to "Log out", session_path("current"), :method => :delete %>
 				<% else %>
-				<%= link_to "Log in", new_session_path %> or <%= link_to "Sign up", new_user_path %>
+				<%= link_to "Sign Up", new_user_path, class: "button" %> &nbsp; <%= link_to "Log in", new_session_path, class: "button" %> 
 			<% end %>
 		</p>
 		
