--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,19 +1,22 @@
 <%= render "/shared/header" %>
-<h3>All Your Reservations:</h3>
+<section class="allReservations">
+<h3>Your Reservations</h3>
 
 <ul>
 	<% @reservations.newest_first.each do |reservation| %>
 		<% if current_user != nil %>
 			<% if reservation.user_id == current_user.id %>
 				<li>
-					You have a reservation at <%= reservation.restaurant.name %> on <%= reservation.date.strftime("%A, %b %d") %> at <%= reservation.time.strftime("%I:%M %p") %>. Party size of <%= reservation.party_size %>.
+					<%= image_tag("reservationLi.png", alt: "list item") %>
+					You have a reservation at <span><%= reservation.restaurant.name %></span> on <%= reservation.date.strftime("%A, %b %d") %> at <%= reservation.time.strftime("%I:%M %p") %>. Party size of <%= reservation.party_size %>.
 				</br></br>
 					
-					<%= link_to "View", "/"%> | Can't get these links to work yet.. but the edit/and delete functionality is completed 
+					<%= link_to "VIEW", "/"%> | Can't get these links to work yet.. but the edit/and delete functionality is completed 
 					</br></br>
 				</li>
 			<% end %>
 		<% end %>
 	<% end %>
 </ul>
+</section>
 
