--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -1,5 +1,3 @@
-<h1>Make a Reservation for: <%= @restaurant.name %> </h1>
-
 <%= form_for([@restaurant, @reservation]) do |f| %>
 	<% if @reservation.errors.any? %>
 		<div id="error_explanation">
@@ -17,15 +15,15 @@
 	<% end %>
 	<div id="field">
 		<%= f.label :date %>
-		<%= f.date_field :date %>
+		<%= f.date_field :date %></br></br>
 	</div>
 	<div id="field">
 		<%= f.label :time %>
-		<%= f.time_field :time %>
+		<%= f.select(:time, reservation_time_select(@restaurant)) %></br></br>
 	</div>
 	<div id="field">
 		<%= f.label :party_size %>
-		<%= f.number_field :party_size %>
+		<%= f.number_field :party_size %></br></br>
 	</div>
 	<div id="actions">
 		<%= f.submit %>
