Viewing one reservation for specific restaurant

--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -27,8 +27,8 @@
 	</div>
 	<div class="field">
 		<%= f.label :open_time %></br>
-		
 		<%= f.select(:open_time, restaurant_time_select) %></br></br>
+		<!--restaurant_time_select-->
 	</div>
 	<div class="field">
 		<%= f.label :close_time %></br>
