--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -9,8 +9,9 @@
 					You have a reservation at <%= reservation.restaurant.name %> on <%= reservation.date.strftime("%A, %b %d") %> at <%= reservation.time.strftime("%I:%M %p") %>. Party size of <%= reservation.party_size %>.
 				</br></br>
 					
-					<%= link_to "View", "/"%> | Can't get these links to work yet.. but the edit/and delete functionality is completed 
+					<%= link_to "View", "/restaurants/#{reservation.restaurant.id}/reservations/#{reservation.id}"%>
 					</br></br>
+
 				</li>
 			<% end %>
 		<% end %>
