creating a newcategory branch

--- a/app/views/categories/_search_results.html.erb
+++ b/app/views/categories/_search_results.html.erb
@@ -1,6 +1,6 @@
 <ul>
-    <% @categories.each do |category| %>
-  <li><%= link_to grant.title, 
-    :action => 'show', :id => category.id  %></li>
+    <% @resaurants.each do |category| %>
+  <li><%= link_to , 
+    :action => 'show', :id => cuisine_id  %></li>
   <% end %>
   </ul>
